Added -madx flag to clang compiler to enable intrinsics

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,8 @@
 cmake_minimum_required (VERSION 3.0)
 project (fplib)
 
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+  target_compile_options(fplib PRIVATE -madx)
+endif()
+
 add_library(fplib src/fplib.cpp src/fplib.h)
