Added -madx flag to clang compiler to enable intrinsics

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,14 @@
 cmake_minimum_required (VERSION 3.0)
 project (fplib)
 
-if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-  target_compile_options(fplib PRIVATE -madx)
+# enable C++11 standard
+set(CMAKE_CXX_STANDARD 11)
+
+# enable intrinsics for clang compiler
+if (CMAKE_CXX_COMPILER MATCHES ".*clang")
+  set(CMAKE_CXX_FLAGS "-madx")
 endif()
 
-target_compile_options(fplib PRIVATE -madx)
 message(STATUS "Travis test..")
 
 add_library(fplib src/fplib.cpp src/fplib.h)
